--- a/src/components/Details/tabs/LogsTab.css
+++ b/src/components/Details/tabs/LogsTab.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .logs-toolbar {
@@ -18,7 +19,6 @@
 
 .toolbar-section {
   display: flex;
-  gap: 0.5rem;
 }
 
 .toolbar-btn {
